hands_on_lab/fully-configured-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's http port
  creationTimestamp: '2019-08-13T04:57:49Z'
  labels:
    application: mlbparks
    createdBy: template-mlbparks-wildfly
    template.openshift.io/template-instance-owner: e61d9236-bd86-11e9-8e73-96000028a1b2
  name: mlbparks
  namespace: os-basics
  resourceVersion: '8935841'
  selfLink: /api/v1/namespaces/os-basics/services/mlbparks
  uid: e638699a-bd86-11e9-8e73-96000028a1b2
spec:
  clusterIP: 172.30.113.167
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    deploymentConfig: mlbparks
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
